k8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart-service
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
